Fix table on small screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -566,7 +566,20 @@ a:link {
 .social-faucet-table {
   overflow: none;
   text-align: center;
+  table {
+    table-layout: fixed;
+
+  }
+  th, td {
+    white-space: pre-wrap; /* CSS3 */
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */
+    white-space: -o-pre-wrap; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+    vertical-align: middle;
+  }
 }
+
 
 .social-faucet-table-search {
   border-radius: 0;
